Feature/multitenant dataplane signaling protocol streaming (#341)
* feat(datatransfer): add grpc transport profile routing

- Add TransportProfile constants class (stream:grpc)
- Add transportProfiles field to DataPlaneRegistration so dataplanes
  can advertise supported transport profiles at registration time
- Add transportProfile field to TransferProcess to persist the chosen
  profile; update all copyWith* methods to preserve it
- Add DataPlaneRouter.selectDataPlane(transferType, processId, profile)
  with sticky routing by processId and explicit profile-based filtering;
  throws IllegalStateException when a non-null profile has no match
  (no silent fallback to HTTP pull/push)
- Add TransportProfileResolver service: resolves stream:grpc profile
  for stream:grpc transfer type, null for all HTTP types
- Add DataPlaneClient.start(message, profile) and prepare(message,
  transferType, profile) profile-aware overloads that delegate to the
  sticky router path; existing overloads unchanged
- Update DataPlaneRegistrationService.register() to preserve
  transportProfiles on re-registration

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

* fix(datatransfer): wire grpc profile-aware dataplane routing

- DataTransferAPIService.downloadData() now resolves TransportProfile and
  persists it on TransferProcess; routes to DataPlaneClient.start(msg, profile)
  for stream:grpc and legacy start(msg) for HTTP flows
- DataPlaneClient.terminate/suspend/resume gain profile-aware overloads that
  use selectOrThrow(transferType, processId, transportProfile) for sticky
  routing to the correct gRPC data plane
- DataPlaneClient.clearStickyAssignment() delegates to DataPlaneRouter to
  remove the pinned endpoint after COMPLETED or TERMINATED
- DataPlaneRouter.clearStickyAssignment() removes the processId entry from
  stickyMap so the next selection re-evaluates via round-robin
- terminateTransfer() and completeTransfer() call clearStickyAssignment()
  unconditiona